test/valid/58248_empty_string/empty_string.mag
-- Author: 58248, Afonso Topa 

fun main(_) : Unit -> Unit =
    print("")
   
