test/invalid-syntax/57163_no_parenthesis_around_wild_card/no_parenthesis_around_wild_card.mag
-- Author: 57163, Guilherme Dias
-- No parenthesis around wild card
fun noParenthesis _ : Unit -> Unit =
	print(1242)


